using percentage to try and fix cube not fitting properly on iphone 14

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -245,7 +245,7 @@
   .stage-cube-cont {
     width: 100%;
     height: 25%;
-    top: calc(100% - 100px);
+    top: 90%;
     bottom: auto;
     margin:auto;
     overflow: hidden;
